<resources>
    <string name="app_name">Doctor360</string>
    <string name="app_final">DOCTOR360</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="menu_home">Home</string>
    <string name="request">Request</string>
    <string name="menu_request">Referred Doctors</string>
    <string name="menu_patient_request">Pending Requests</string>
    <string name="menu_accepted_request">Accepted Requests</string>
    <string name="menu_chat_room">Video Chat Room</string>
    <string name="menu_hospitals">Hospitals</string>
    <string name="menu_request_doctor">Request Doctor</string>
    <string name="menu_appointment_request">Pending Appointments</string>
    <string name="menu_request_appointment">Request Appointment</string>
    <string name="menu_scheduled_appointment">Scheduled Appointments</string>
    <string name="menu_qna">QnA</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_question">Ask Question</string>
    <string name="menu_question_from_patient">Questions from Patient</string>
    <string name="menu_about_us">About App</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_logout">Logout</string>
    <string name="no_account">Not registered to Doctor360 yet?</string>
    <string name="yes_account">Already registered to Doctor360?</string>
    <string name="patient_session">Sign up as Patient</string>
    <string name="doctor_session">Sign up as Doctor</string>
    <string name="session">Sign in to start your session</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signup_as">SIGNUP AS</string>
    <string name="signin_as">SIGN IN</string>
    <string name="signup_patient">As Patient</string>
    <string name="signup_doctor">As Doctor</string>
    <string name="remember_me">Remember Me</string>
    <string name="problem">Problem</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="mobile">Mobile No</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="age">Age</string>
    <string name="blood_group">Blood Group</string>
    <string name="specialization">Specialization</string>
    <string name="qualification">Qualification</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="document">Document Image (jpeg, jpg or png format)</string>
    <string name="update_profile">Update Profile</string>
    <string name="click_photo">Click Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="version">Version 1.0</string>
    <string name="slogan">Your Health, Our Treatment</string>
    <string name="slide_1_title">Video Consultation</string>
    <string name="slide_1_desc">Online video Consultations with certified doctors</string>
    <string name="slide_2_title">Appointment with Doctor</string>
    <string name="slide_2_desc">Booking Appointment with Specialist</string>
    <string name="slide_3_title">Consult a Doctor</string>
    <string name="slide_3_desc">You can consult a doctor online at your comfort</string>
    <string name="slide_4_title">Search Right Doctor</string>
    <string name="slide_4_desc">Search the right doctor, view doctors details and reviews</string>
    <string name="password_policy">Password Policy</string>
    <string name="policy1">Must have at least 1 special character</string>
    <string name="policy2">Must have at least 1 upper case letter</string>
    <string name="policy3">Must have at least 1 lower case letter</string>
    <string name="policy4">Must have at least 1 digit</string>
    <string name="policy5">Must be equal or more than 8 characters</string>
    <string name="no_internet">No Internet Connection. Please check your connection and try again.</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_password">Reset Password</string>
    <string name="action_profile">My Profile</string>
    <string name="action_logout">Logout</string>
    <string name="dashboard">Dashboard</string>
    <string name="unverified">Unverified</string>
    <string name="verified">Verified</string>
    <string name="verify">Verify</string>
    <string name="reject">Reject</string>
    <string name="unverified_doctors">Unverified Doctors</string>
    <string name="verified_doctors">Verified Doctors</string>
    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="bloodList">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="qualificationList">
        <item>Bachelor of Medicine (MBBS, BMBS, MBChB, MBBCh)</item>
        <item>Bachelor of Surgery (MBBS, BMBS, MBChB, MBBCh)</item>
        <item>Bachelor of Medicine (B.Med)</item>
        <item>Bachelor of Surgery (B.S)/(B.Surg)</item>
        <item>Doctor of Medicine (MD, Dr.MuD, Dr.Med)</item>
        <item>Doctor of Osteopathic Medicine (DO)</item>
        <item>Doctor of Medicine by research MD(Res), DM</item>
        <item>Master of Clinical Medicine (MCM)</item>
        <item>Master of Medical Science (MMSc, MMedSc)</item>
        <item>Master of Public Health (MPH)</item>
        <item>Master of Medicine (MM, MMed)</item>
        <item>Master of Philosophy (MPhil)</item>
        <item>Master of Philosophy in Ophthalmology (MPhO)</item>
        <item>Master of Public Health and Ophthalmology (MPHO)</item>
        <item>Master of Surgery (MS, MSurg, MChir, MCh, ChM, CM)</item>
        <item>Master of Science in Medicine or Surgery (MSc)</item>
        <item>Doctor of Clinical Medicine (DCM)</item>
        <item>Doctor of Clinical Surgery (DClinSurg)</item>
        <item>Doctor of Medical Science (DMSc, DMedSc)</item>
        <item>Doctor of Surgery (DS, DSurg)</item>
    </string-array>
    <string-array name="sepcializationList">
        <item>Allergists/Immunologists</item>
        <item>Anesthesiologists</item>
        <item>Cardiologists</item>
        <item>Colon and Rectal Surgeons</item>
        <item>Critical Care Medicine Specialists</item>
        <item>Dermatologists</item>
        <item>Endocrinologists</item>
        <item>Emergency Medicine Specialists</item>
        <item>Family Physicians</item>
        <item>Gastroenterologists</item>
        <item>Geriatric Medicine Specialists</item>
        <item>Hematologists</item>
        <item>Hospice and Palliative Medicine Specialists</item>
        <item>Infectious Disease Specialists</item>
        <item>Internists</item>
        <item>Medical Geneticists</item>
        <item>Nephrologists</item>
        <item>Neurologists</item>
        <item>Obstetricians and Gynecologists</item>
        <item>Oncologists</item>
        <item>Ophthalmologists</item>
        <item>Osteopaths</item>
        <item>Otolaryngologists</item>
        <item>Pathologists</item>
        <item>Pediatricians</item>
        <item>Physiatrists</item>
        <item>Plastic Surgeons</item>
        <item>Podiatrists</item>
        <item>Preventive Medicine Specialists</item>
        <item>Psychiatrists</item>
        <item>Pulmonologists</item>
        <item>Radiologists</item>
        <item>Rheumatologists</item>
        <item>Sleep Medicine Specialists</item>
        <item>Sports Medicine Specialists</item>
        <item>General Surgeons</item>
        <item>Urologists</item>

    </string-array>
    <string name="about">About Doctor360</string>
    <string name="about1">Doctor360 is the First Online Healthcare Service Provider from Nepal where patients can consult certified medical personnel and get additional health related services along with other information related to health online.</string>
    <string name="about2">We understand that getting medical information and health advice from doctors should be easier and technology can bridge this gap between doctors and patients in our country. Hamro doctor is our attempt to change the face of healthcare in our country and make health care less complicated and make it widely and easily accessible.</string>
    <string name="about3">One can get detailed , personalized research based and certified information along with expert opinions from qualified doctors. This service is used commonly in order to understand medical condition, diagnosis, treatment options or alternatives and recommendations for future therapeutic conditions.</string>
    <string name="about4">Doctor360 is also  a virtual community where doctors and patients can engage in live chats and discussions in order to make things more convenient.  Our facilities help patients understand their health better, make better decisions related to their health and find the best doctors and the best cure.</string>
    <string name="about5">Our services not only help doctors get patients but it also improves their overall reputation and also expands their work to a larger audience. Patients can also keep a record of their medical history along with their profiles, saving them from the hassle of carrying medical files and reports here and there.</string>
    <string name="about6">Doctor360 was founded with a vision of making health care and medical consultation less complicated and widely accessible. We aim to develop a trustworthy health care service which is personalized and less sophisticated. Along with online consultation we also provide services like blood donation, online discussion and health feed. </string>
    <string name="faq0_title">1.What is Doctor360?</string>
    <string name="faq0_desc">Doctor30 is an online platform serving patients and doctors by eliminating the boundaries of quality healthcare via online video consultations, managing patient’s self and family medical records with great user experience on mobile devices.</string>
    <string name="faq1_title">2.How can I access Doctor360?</string>
    <string name="faq1_desc">Doctor360 can be access via android app. Our iOS app is being released soon.</string>
    <string name="faq2_title">3.Is the any charges to use Doctor360?</string>
    <string name="faq2_desc">No. There is no any charges to use this app. Its free for all users.</string>
    <string name="faq3_title">4.What I can ask to doctor?</string>
    <string name="faq3_desc">Any medical question that you need to ask with a doctor who specializes in that area. Our doctors help with pregnancies, fevers, colds, sexual issues, weight and a whole lot more.</string>
    <string name="faq4_title">5.Is Doctor360 app safe to use?</string>
    <string name="faq4_desc">Yes. We have a team of carefully selected and personally verified MD and MBBS doctors from across Nepal. Each doctor has received extensive training to consult you over the app. </string>
</resources>