<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_doctor_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_patient_request"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:title="@string/menu_patient_request" />
        <item
            android:id="@+id/nav_patient_request_accepted"
            android:icon="@drawable/ic_assignment_turned_in_black_24dp"
            android:title="@string/menu_accepted_request" />
        <item
            android:id="@+id/nav_appointment_request"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/menu_appointment_request" />
        <item
            android:id="@+id/nav_scheduled_appointment"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/menu_scheduled_appointment" />
        <item
            android:id="@+id/nav_doctor_chat_room"
            android:icon="@drawable/ic_voice_chat_black_24dp"
            android:title="@string/menu_chat_room" />
        <item
            android:id="@+id/nav_doctor_faq"
            android:icon="@drawable/ic_question_answer_black_24dp"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_doctor_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>
