<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about1"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about2"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about3"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about4"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about5"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about6"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/grey"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_7sdp"/>


            </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</ScrollView>