<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_gravity="center_horizontal"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/splash_logo"
            android:layout_marginTop="@dimen/_130sdp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/isolation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_3sdp"
            android:textColor="@color/positive" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:id="@+id/splashProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

</RelativeLayout>