<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDoctorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Select Doctor"
            android:textColor="@color/facebook"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@+id/spinnerRequestDoctorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:ms_dropdown_height="wrap_content"
            android:hint="Select Doctor"
            android:textAlignment="viewStart"
            android:padding="@dimen/_10sdp"
            android:ems="10"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:imeOptions="actionDone"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtRequestPatientDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_date_range_black_24dp"
                android:drawablePadding="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:ems="10"
                android:hint="@string/date"
                android:padding="@dimen/_10sdp"
                android:imeOptions="actionDone" />

            <EditText
                android:id="@+id/edtRequestPatientTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_mobile"
                android:drawablePadding="@dimen/_12sdp"
                android:ems="10"
                android:hint="@string/time"
                android:padding="@dimen/_10sdp"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRequestPatientProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_message_black_24dp"
            android:drawablePadding="@dimen/_12sdp"
            android:ems="10"
            android:hint="@string/problem"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:enabled="false"
            android:imeOptions="actionDone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtRequestPatientProblemDes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:background="@drawable/rectangle_bg"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:enabled="false"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/btnRequestDoctorAppoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:background="@drawable/round_bg"
            android:text="@string/request"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>